# bioverse

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
bioverse/: adapter.py  backend.py  benchmark.py  cli.py  collater.py  data.py  dataset.py  factory.py  framework.py  logger.py  metric.py  processor.py  sampler.py  task.py  trainer.py  transform.py  virtual.py
bioverse/adapters/: __init__.py  alpha_fold.py  ares.py  beta_lactam.py  dtp_aids.py  picasso.py  protein_inv_bench.py  proteingym.py  quantum_machines.py  revised_molecular_dynamics.py  rna3db.py  rot_mnist.py
bioverse/backends/: __init__.py  tensorflow.py  torch.py
bioverse/benchmarks/: B_AFINVF.py  B_AFINVF.yaml  B_AFMR20.yaml  B_BTALAC.yaml  B_ECINVF.py  B_ECINVF.yaml  B_HIV2D0.py  B_HIV2D0.yaml  B_HIV3D0.py  B_HIV3D0.yaml  B_INVATM.yaml  B_INVC42.py  B_INVC42.yaml  B_INVFTR.yaml  B_PCASSO.yaml  B_QM9APH.py  B_QM9APH.yaml  B_QM9CV0.py  B_QM9CV0.yaml  B_QM9GAP.py  B_QM9GAP.yaml  B_QM9HOM.py  B_QM9HOM.yaml  B_QM9LUM.py  B_QM9LUM.yaml  B_QM9MU0.py  B_QM9MU0.yaml  B_RMDASP.yaml  B_RMNIST.py  B_RMNIST.yaml  B_RNA3DB.py  B_RNA3DB.yaml  B_RNKRNA.py  B_RNKRNA.yaml  B_SRFC42.yaml  __init__.py
bioverse/collaters/: __init__.py  long.py  wide.py
bioverse/datasets/: D_AFEC00.py  D_AFEC00.yaml  D_AFPGYM.py  D_AFPGYM.yaml  D_AFSP00.py  D_AFSP00.yaml  D_ARES00.py  D_ARES00.yaml  D_BTALAC.yaml  D_HIV2D0.py  D_HIV2D0.yaml  D_HIV3D0.py  D_HIV3D0.yaml  D_INVC42.py  D_INVC42.yaml  D_PCASSO.yaml  D_PROGYM.py  D_PROGYM.yaml  D_QNTMA9.py  D_QNTMA9.yaml  D_RMD170.py  D_RMDASP.yaml  D_RMNIST.py  D_RMNIST.yaml  D_RNA3DB.py  D_RNA3DB.yaml  D_SRFC42.yaml  D_TINY00.py  D_TINY00.yaml  __init__.py
bioverse/frameworks/: __init__.py  pyg.py
bioverse/leaderboards/: B_HIV2D0.yml  B_INVC42.yml  B_QM9APH.yml  B_QM9CV0.yml  B_QM9GAP.yml  B_QM9HOM.yml  B_QM9LUM.yml  B_QM9MU0.yml  B_RMNIST.yml  B_RNKRNA.yml
bioverse/loggers/: __init__.py  comet.py  disk.py  no.py
bioverse/metrics/: __init__.py  accuracy.py  auprc.py  auroc.py  balanced_binary_accuracy.py  balanced_multi_class_accuracy.py  binary_accuracy.py  coefficient_of_determination.py  error_rate.py  f1_score.py  mean_absolute_error.py  mean_squared_error.py  multi_class_accuracy.py  multi_label_accuracy.py  pearsons_r.py  perplexity.py  precision.py  recall.py  recovery.py  spearmans_rho.py  tm_score.py  top_k_accuracy.py  topk_recovery.py
bioverse/processors/: __init__.py  cif.py  pdb.py  sdf.py  xyz.py
bioverse/samplers/: __init__.py  frame.py  molecule.py  molecule_and_mutation.py  molecule_and_random_residues.py  mutation.py  residue.py
bioverse/tasks/: __init__.py  dummy.py  inverse_folding.py  masked_residue_prediction.py  mutation_effect_prediction.py  property_prediction.py  structure_prediction.py  vertex_property_prediction.py
bioverse/transforms/: __init__.py  backbone_bond_angles.py  backbone_edge_rbf.py  backbone_node_rbf.py  core_and_surface_distance.py  create_feature_from_others.py  curvature.py  dihedrals.py  edge_local_directions.py  edge_pos_emb.py  edge_vectors.py  embed_rna_fm.py  eps_graph.py  filter_residues_by_value.py  filter_sequence_length.py  frame_split.py  graph_from_smiles.py  identity.py  is_surface_residue.py  knn_graph.py  linear_residue_graph.py  local_reference_frames.py  one_hot_atom_features.py  one_hot_residue_features.py  orientations.py  (+18 more)
testing/: test_processors.py  test_transforms.py
tests/: test_metric.py  test_metrics.py  test_transforms.py  test_utilities.py
(+19 files in other folders)
